# ffmpeg-audio-player

./: CMakeLists.txt  README.md  simplest_audio_player.c
